@@ -38,7 +38,7 @@
 	<p><i>QtSpim</i> is a new user interface for <em>Spim</em>
 
  built on the
-	<a href="http://qt.nokia.com/">Qt UI framework</a>. Qt is cross-platform, so 
+	<a href="http://qt-project.org/">Qt UI framework</a>. Qt is cross-platform, so 
 	the same user iterface and same code will run on Windows, Linux, and Mac OS 
 	X (yeah!). Moreover, the interface is clean and up-to-date (unlike the archaic 
 	X windows interface).</p>
@@ -107,9 +107,9 @@ Linux can be downloaded from:
 https://sourceforge.net/projects/spimsimulator/files/</a>.
 <a href="http://spimsimulator.svn.sourceforge.net/viewvc/spimsimulator/">Full source 
 code</a> is also available (to compile <i>QtSpim</i>, you need
-<a href="http://qt.nokia.com/downloads/">Nokia&#39;s Qt framework</a>, a very nice 
+<a href="http://qt-project.org/downloads">the Qt framework</a>, a very nice 
 cross-platform UI framework that can be downloaded from
-<a href="http://qt.nokia.com/downloads/">here</a>).</p>
+<a href="http://qt-project.org/downloads">http://qt-project.org/downloads</a>).</p>
 <p><a href="older.html">Older versions of <em>Spim</em></a>, namely <em>PCSpim</em> 
 and <em>xspim</em>, are still available and are updated with bug fixes, though 
 active development on them is done.</p>
